// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subnav component should match snapshot with context title 1`] = `
<styled.nav>
  <styled.h1>
    context title
  </styled.h1>
  <styled.ul />
</styled.nav>
`;

exports[`Subnav component should match snapshot with no tabs 1`] = `
<styled.nav>
  <styled.ul />
</styled.nav>
`;

exports[`Subnav component should match snapshot with tabs 1`] = `
<styled.nav>
  <styled.ul>
    <styled.li
      active={true}
      data-test="SubnavTab-0"
      key="/tab1"
      onClick={[Function]}
    >
      <styled.span>
        tab1
      </styled.span>
    </styled.li>
    <styled.li
      active={false}
      data-test="SubnavTab-1"
      key="/tab2"
      onClick={[Function]}
    >
      <styled.span>
        tab2
      </styled.span>
    </styled.li>
  </styled.ul>
</styled.nav>
`;
